# GAMEP0NG

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  makefile  sfml-app
include/: Bola.hpp  Marcador.hpp  Paleta.hpp
src/: Bola.cpp  Marcador.cpp  Paleta.cpp  main.cpp
